chrome/browser/ui/views/location_bar/icon_label_bubble_view.cc
@@ -75,7 +75,8 @@ void IconLabelBubbleView::SeparatorView::OnPaint(gfx::Canvas* canvas) {
       ui::NativeTheme::kColorId_TextfieldDefaultColor);
   const SkColor separator_color = SkColorSetA(
       plain_text_color, color_utils::IsDark(plain_text_color) ? 0x59 : 0xCC);
-  const float x = GetLocalBounds().right() - owner_->GetEndPadding() -
+  const float x = GetLocalBounds().right() -
+                  owner_->GetEndPaddingWithSeparator() -
                   1.0f / canvas->image_scale();
   canvas->DrawLine(gfx::PointF(x, GetLocalBounds().y()),
                    gfx::PointF(x, GetLocalBounds().bottom()), separator_color);
@@ -236,7 +237,7 @@ void IconLabelBubbleView::Layout() {
   // padding. When the view is expanding (or showing-label steady state), the
   // image. When the view is contracting (or hidden-label steady state), whittle
   // away at the trailing padding instead.
-  int bubble_trailing_padding = GetEndPadding();
+  int bubble_trailing_padding = GetEndPaddingWithSeparator();
   int image_width = image_->GetPreferredSize().width();
   const int space_shortage = image_width + bubble_trailing_padding - width();
   if (space_shortage > 0) {
@@ -253,7 +254,7 @@ void IconLabelBubbleView::Layout() {
   // value to be, since it won't be visible.
   const int label_x = image_->bounds().right() + GetInternalSpacing();
   int label_width = std::max(0, width() - label_x - bubble_trailing_padding -
-                                    GetPrefixedSeparatorWidth());
+                                    GetWidthBetweenIconAndSeparator());
   label_->SetBounds(label_x, 0, label_width, height());
 
   // The separator should be the same height as the icons.
@@ -261,7 +262,8 @@ void IconLabelBubbleView::Layout() {
   gfx::Rect separator_bounds(label_->bounds());
   separator_bounds.Inset(0, (separator_bounds.height() - separator_height) / 2);
 
-  float separator_width = GetPrefixedSeparatorWidth() + GetEndPadding();
+  float separator_width =
+      GetWidthBetweenIconAndSeparator() + GetEndPaddingWithSeparator();
   int separator_x =
       ui::MaterialDesignController::IsRefreshUi() && label_->text().empty()
           ? image_->bounds().right()
@@ -271,7 +273,8 @@ void IconLabelBubbleView::Layout() {
 
   gfx::Rect ink_drop_bounds = GetLocalBounds();
   if (ShouldShowSeparator()) {
-    ink_drop_bounds.set_width(ink_drop_bounds.width() - GetEndPadding());
+    ink_drop_bounds.set_width(ink_drop_bounds.width() -
+                              GetEndPaddingWithSeparator());
   }
 
   ink_drop_container_->SetBoundsRect(ink_drop_bounds);
@@ -453,9 +456,9 @@ SkColor IconLabelBubbleView::GetParentBackgroundColor() const {
 
 gfx::Size IconLabelBubbleView::GetSizeForLabelWidth(int label_width) const {
   gfx::Size size(image_->GetPreferredSize());
-  size.Enlarge(
-      GetInsets().left() + GetPrefixedSeparatorWidth() + GetEndPadding(),
-      GetInsets().height());
+  size.Enlarge(GetInsets().left() + GetWidthBetweenIconAndSeparator() +
+                   GetEndPaddingWithSeparator(),
+               GetInsets().height());
 
   const bool shrinking = IsShrinking();
   // Animation continues for the last few pixels even after the label is not
@@ -506,17 +509,18 @@ int IconLabelBubbleView::GetExtraInternalSpacing() const {
   return 0;
 }
 
-int IconLabelBubbleView::GetPrefixedSeparatorWidth() const {
+int IconLabelBubbleView::GetWidthBetweenIconAndSeparator() const {
   return ShouldShowSeparator() || ShouldShowExtraEndSpace()
-             ? kIconLabelBubbleSeparatorWidth +
-                   kIconLabelBubbleSpaceBesideSeparator
+             ? kIconLabelBubbleSpaceBesideSeparator
              : 0;
 }
 
-int IconLabelBubbleView::GetEndPadding() const {
-  if (ShouldShowSeparator())
-    return kIconLabelBubbleSpaceBesideSeparator;
-  return GetInsets().right();
+int IconLabelBubbleView::GetEndPaddingWithSeparator() const {
+  int end_padding = ShouldShowSeparator() ? kIconLabelBubbleSpaceBesideSeparator
+                                          : GetInsets().right();
+  if (ShouldShowSeparator() || ShouldShowExtraEndSpace())
+    end_padding += kIconLabelBubbleSeparatorWidth;
+  return end_padding;
 }
 
 bool IconLabelBubbleView::OnActivate(const ui::Event& event) {
