chrome/browser/ui/views/location_bar/selected_keyword_view.cc
@@ -102,7 +102,7 @@ int SelectedKeywordView::GetExtraInternalSpacing() const {
   // MD Refresh needs more space to align the label text with suggestion text.
   return ui::MaterialDesignController::IsRefreshUi()
              ? 11
-             : GetPrefixedSeparatorWidth();
+             : GetWidthBetweenIconAndSeparator();
 }
 
 const char* SelectedKeywordView::GetClassName() const {
